--- a/hindi_wood_lvl.css
+++ b/hindi_wood_lvl.css
@@ -59,4 +59,4 @@ body {
 #level4 { top: 50%; left: 35.5%; width: 6%; height: 0%; padding-bottom: 7%;  }
 #star { top: 36%; left: 54%; width: 7%; height: 0%; padding-bottom: 7%;  }
 #target { top: 67%; left: 49%; width: 7%; height: 0%; padding-bottom: 7%;  }
-#next { top: 60%; left: 66%; width: 7%; height: 0%; padding-bottom: 7%;  }
+#next { top: 63%; left: 62%; width: 12%; height: 11%; transform: rotate(-25deg); }
