--- a/hindi_diam_lvl.css
+++ b/hindi_diam_lvl.css
@@ -31,6 +31,7 @@ body {
     border-radius: 50%;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    background-color: black;
     
 }
 .map-area:hover {
@@ -54,9 +55,9 @@ body {
 .map-area:hover::after {
     opacity: 1;
 }
-#level1 { top: 7%; left: 42%; width: 6%; height: 0%; padding-bottom: 6%; }
-#level2 { top: 22%; left: 49%; width: 6%; height: 0%; padding-bottom: 6%;  }
-#level3 { top: 40%; left: 45%; width: 6%; height: 0%; padding-bottom: 6%;  }
-#level4 { top: 50%; left: 35.5%; width: 6%; height: 0%; padding-bottom: 7%;  }
-#star { top: 36%; left: 54%; width: 7%; height: 0%; padding-bottom: 7%;  }
-#target { top: 67%; left: 49%; width: 7%; height: 0%; padding-bottom: 7%;  }
+#level6 { top: 12%; left: 54%; width: 6%; height: 0%; padding-bottom: 6%; }
+#level7 { top: 26%; left: 46%; width: 6%; height: 0%; padding-bottom: 6%;  }
+#level8 { top: 51%; left: 39%; width: 6%; height: 0%; padding-bottom: 6%;  }
+#level9 { top: 65%; left: 50%; width: 6%; height: 0%; padding-bottom: 6%;  }
+#star { top: 27%; left: 61%; width: 7%; height: 0%; padding-bottom: 7%;  }
+#target { top: 80%; left: 60%; width: 7%; height: 0%; padding-bottom: 7%;  }
